Sets scoring strategy

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -9,22 +9,22 @@ gaston {
 
   absences = [
     {
-      person = "gael",
+      person = "gael"
       slots = [ "day1-pm", "day3-am" ]
     }
   ]
 
   topics = [
     {
-      name = "Atomic Robo",
-      mandatory = [ "gael" ],
+      name = "Atomic Robo"
+      mandatory = [ "gael" ]
       forbidden = [ "manu", "jb" ]
       max = 5
       # To force a slot (or maybe multiple slots ?), unimplemented yet
       slot = "day3-am"
     },
     {
-      name = "Hexenwald",
+      name = "Hexenwald"
       mandatory = [ "julien" ]
       min = 3
     }
@@ -32,21 +32,21 @@ gaston {
 
   incompatibilities = [
     {
-      ones = ["udo"],
-      others = ["yann", "ben"],
+      person = "udo"
+      group = ["yann", "ben"]
       penalty = 10
     },
     {
-      ones = ["jb"],
-      others = ["manu"],
+      person = "jb"
+      group = ["manu"]
       penalty = 50
     }
   ]
 
   preferences = [
     {
-      person = "gael",
-      strong = ["Hexenwald"],
+      person = "gael"
+      strong = ["Hexenwald"]
       weak = []
     }
 
