Adds import from UdoCon table format

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,53 +1,391 @@
 #Sample configuration
 gaston {
 
-  slots = ["day1-pm", "day2-am", "day2-pm", "day3-am"]
+  slots = ["D1-afternoon", "D1-evening", "D2-afternoon", "D2-evening", "D3-afternoon"]
 
   persons = [
-    "gael", "manu", "julien", "ben", "yann", "jb"
-  ]
-
-  absences = [
     {
-      person = "gael"
-      slots = [ "day1-pm", "day3-am" ]
+      name = "Aude"
+      weight = 1
+      incompatibilities = ["Mangon", "Najael"]
+    },
+    {
+      name = "Bakémono"
+      weight = 1
+      absences = [ "D3-afternoon" ]
+    },
+    {
+      name = "Bashar"
+      weight = 1
+    },
+    {
+      name = "Boojum"
+      weight = 1
+    },
+    {
+      name = "Chestel"
+      weight = 1
+    },
+    {
+      name = "Cryoban"
+      weight = 1
+    },
+    {
+      name = "Eugénie"
+      weight = 1,
+      incompatibilities = ["Mangon", "Najael"]
+    },
+    {
+      name = "Gabzeta"
+      weight = 1
+    },
+    {
+      name = "Goat"
+      weight = 1
+    },
+    {
+      name = "Highlandjul"
+      weight = 1
+    },
+    {
+      name = "Isidore"
+      weight = 1
+    },
+    {
+      name = "Jorune"
+      weight = 1
+    },
+    {
+      name = "Julian"
+      weight = 1
+    },
+    {
+      name = "Kamiseito"
+      weight = 1
+    },
+    {
+      name = "Kersa"
+      weight = 1
+    },
+    {
+      name = "Killerklown"
+      weight = 1
+    },
+    {
+      name = "Mangon"
+      weight = 1
+    },
+    {
+      name = "Najael"
+      weight = 1
+    },
+    {
+      name = "Orféo"
+      weight = 1
+    },
+    {
+      name = "Paiji"
+      weight = 1
+    },
+    {
+      name = "Paradoks"
+      weight = 1
+    },
+    {
+      name = "Rolapin"
+      weight = 1
+    },
+    {
+      name = "Sammael99"
+      weight = 1
+    },
+    {
+      name = "Selpoivre"
+      weight = 1
+    },
+    {
+      name = "Tolkraft"
+      weight = 1
+    },
+    {
+      name = "Udo Femi"
+      weight = 1
+    },
+    {
+      name = "Zeben"
+      weight = 1
     }
   ]
 
   topics = [
     {
-      name = "Atomic Robo"
-      mandatory = [ "gael" ]
-      forbidden = [ "manu", "jb" ]
+      name = "Agôn"
+      mandatory = ["Highlandjul"]
       max = 5
-      # To force a slot (or maybe multiple slots ?), unimplemented yet
-      slot = "day3-am"
     },
     {
-      name = "Hexenwald"
-      mandatory = [ "julien" ]
-      min = 3
-    }
-  ]
-
-  incompatibilities = [
-    {
-      person = "udo"
-      group = ["yann", "ben"]
-      penalty = 10
+      name = "DC comics - Darkest night"
+      mandatory = ["Selpoivre"]
+      max = 5
     },
     {
-      person = "jb"
-      group = ["manu"]
-      penalty = 50
+      name = "Les Schtroumpfs"
+      mandatory = ["Julian"]
+      max = 5
+    },
+    {
+      name = "Shadow of the Demon Lord"
+      mandatory = ["Zeben"]
+      max = 5
+    },
+    {
+      name = "Delta Green - Scénario original"
+      mandatory = ["Tolkraft"]
+      max = 5
+    },
+    {
+      name = "Blades in the Dark"
+      mandatory = ["Rolapin"]
+      max = 5
+    },
+    {
+      name = "Skyrealms of Jorune Revival"
+      mandatory = ["Sammael99"]
+      max = 5
+    },
+    {
+      name = "Wurm : Rouge massacre"
+      mandatory = ["Gabzeta"]
+      max = 5
+    },
+    {
+      name = "Psi*run"
+      mandatory = ["Paradoks"]
+      max = 5
+    },
+    {
+      name = "Coriolis: Third horizon"
+      mandatory = ["Killerklown"]
+      max = 5
+    },
+    {
+      name = "Blades in the Dark (2e)"
+      mandatory = ["Rolapin"]
+      max = 5
+    },
+    {
+      name = "Meute"
+      mandatory = ["Jorune"]
+      max = 5
+    },
+    {
+      name = "Les Derniers"
+      mandatory = ["Tolkraft"]
+      max = 5
+    },
+    {
+      name = "Chiens de guerre"
+      mandatory = ["Goat"]
+      max = 5
+    },
+    {
+      name = "Tales from the Loop"
+      mandatory = ["Udo Femi"]
+      max = 5
+    },
+    {
+      name = "Donjon & Cie"
+      mandatory = ["Sammael99"]
+      max = 5
+    },
+    {
+      name = "P.U.N.C.H Unit - Katanga 1960"
+      mandatory = ["Cryoban"]
+      max = 4
+    },
+    {
+      name = "Delta Green - Pennsylvania '99"
+      mandatory = ["Selpoivre"]
+      max = 4
+    },
+    {
+      name = "Inflorenza (ambiance Patient 13)"
+      mandatory = ["Eugénie"]
+      max = 4
+    },
+    {
+      name = "INS (les JMVs)"
+      mandatory = ["Isidore"]
+      max = 5
+    },
+    {
+      name = "Summer camp - classe de neige"
+      mandatory = ["Paradoks"]
+      max = 6
+    },
+    {
+      name = "Dieux Ennemis"
+      mandatory = ["Highlandjul"]
+      max = 6
+    },
+    {
+      name = "Wastburg"
+      mandatory = ["Goat"]
+      max = 5
+    },
+    {
+      name = "Black Mirror"
+      mandatory = ["Orfeo"]
+      max = 4
+    },
+    {
+      name = "Le Retour de Soth"
+      mandatory = ["Boojum"]
+      max = 4
+      forbidden = "Tolkraft"
+    },
+    {
+      name = "Godbound - l'appel"
+      mandatory = ["Cryoban"]
+      max = 4
     }
   ]
 
   preferences = [
     {
-      person = "gael"
-      strong = ["Hexenwald"]
+      person = "Aude"
+      strong = ["", "", ""],
       weak = []
+    }
+    {
+      person = "Bakémono"
+      strong = ["", "", ""],
+      weak = []
+    }
+    {
+      person = "Bashar"
+      strong = ["", "", ""],
+      weak = []
+    }
+    {
+      person = "Boojum"
+      strong = ["", "", ""],
+      weak = []
+    }
+    {
+      person = "Chestel"
+      strong = ["", "", ""],
+      weak = []
+    }
+    {
+      person = "Cryoban"
+      strong = ["", "", ""],
+      weak = []
+    }
+    {
+      person = "Eugénie"
+      strong = ["", "", ""],
+      weak = []
+    }
+    {
+      person = "Gabzeta"
+      strong = ["", "", ""],
+      weak = []
+    }
+    {
+      person = "Goat"
+      strong = ["", "", ""],
+      weak = []
+    }
+    {
+      person = "Highlandjul",
+      strong = ["", "", ""],
+      weak = []
+    }
+    {
+      person = "Isidore"
+      strong = ["", "", ""],
+      weak = []
+    }
+    {
+      person = "Jorune"
+      strong = ["", "", ""],
+      weak = []
+    }
+    {
+      person = "Julian"
+      strong = ["", "", ""],
+      weak = []
+    }
+    {
+      person = "Kamiseito"
+      strong = ["Agôn", "Les Derniers", "Tales from the Loop"],
+      weak = ["Dieux Ennemis", "P.U.N.C.H Unit - Katanga 1960", "Meute", "Mexican Death trip", "Donjon & Cie"]
+    }
+    {
+      person = "Kersa"
+      strong = ["P.U.N.C.H Unit - Katanga 1960", "Les Derniers", "Wastburg"],
+      weak = ["Psi*run", "Meute", "Inflorenza (ambiance Patient 13)", "KPDP dans le Dodécaèdre", "Chiens de guerre", "Le Retour de Soth", ]
+    }
+    {
+      person = "Killerklown"
+      strong = ["", "", ""],
+      weak = []
+    }
+    {
+      person = "Mangon"
+      strong = ["Skyrealms of Jorune Revival", "Donjon & Cie"],
+      weak = ["P.U.N.C.H Unit - Katanga 1960", "Delta Green - Pennsylvania '99", "Chiens de guerre"]
+    }
+    {
+      person = "Najael"
+      strong = ["", "", ""],
+      weak = []
+    }
+    {
+      person = "Orféo"
+      strong = ["", "", ""],
+      weak = []
+    }
+    {
+      person = "Paiji",
+      strong = ["", "", ""],
+      weak = []
+    }
+    {
+      person = "Paradoks"
+      strong = ["", "", ""],
+      weak = []
+    }
+    {
+      person = "Rolapin"
+      strong = ["", "", ""],
+      weak = []
+    }
+    {
+      person = "Sammael99"
+      strong = ["Meute", "Coriolis: Third horizon", "Godbound - l'appel"],
+      weak = ["Dieux Ennemis", "Les Schtroumpfs", "Summer camp - classe de neige", "Wurm : Rouge massacre", "Wastburg", "Delta Green - Scénario original"]
+    }
+    {
+      person = "Selpoivre"
+      strong = ["", "", ""],
+      weak = []
+    }
+    {
+      person = "Tolkraft"
+      strong = ["", "", ""],
+      weak = []
+    }
+    {
+      person = "Udo Femi"
+      strong = ["", "", ""],
+      weak = []
+    }
+    {
+      person = "Zeben"
+      strong = ["KPDP dans le Dodécaèdre", "Tales from the Loop", "Blades in the Dark"],
+      weak = ["Agôn", "Psi*run", "Meute", "Wastburg"]
     }
 
   ]
