--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -4,6 +4,7 @@ gaston {
     # Strong preference should be more than twice as strong as the weak preference
     strong-preference = 10
     weak-preference = 1
+    incompatibility-anti-preference = -50
   }
 
 }
