--- a/src/test/resources/udocon-application.conf
+++ b/src/test/resources/udocon-application.conf
@@ -1,14 +1,11 @@
 "gaston" : {
 
-
   "settings" : {
-    "incompatibility-preference" : -50.0,
-    "scoring-strategy" : {
-      "type" : "minimax"
-    },
+    "incompatibility-anti-preference" : -50.0,
     "strong-preference" : 5.0,
     "weak-preference" : 1.0
   },
+
   "slots" : [
     "D1-afternoon",
     "D2-afternoon",
@@ -16,8 +13,6 @@
     "D2-evening",
     "D3-afternoon"
   ]
-
-
 
   "persons" : [
     {
@@ -65,7 +60,7 @@
     {
       "absences" : [],
       "incompatible" : [],
-      "name" : "Orféo",
+      "name" : "Orfeo",
       "weight" : 1.5
     },
     {
@@ -199,7 +194,7 @@
     {
       "forbidden" : [],
       "mandatory" : [
-        "Orféo"
+        "Orfeo"
       ],
       "max" : 4,
       "name" : "Black Mirror"
@@ -634,7 +629,7 @@
       ]
     },
     {
-      "person" : "Orféo",
+      "person" : "Orfeo",
       "strong" : [
         "Inflorenza (ambiance Patient 13)",
         "Blades in the Dark"
