--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -31,7 +31,7 @@
       "absences" : [],
       "incompatible" : [],
       "name" : "Jorune",
-      "weight" : 1.0
+      "weight" : 1.5
     },
     {
       "absences" : [],
@@ -323,7 +323,7 @@
     },
     {
       "forbidden" : [],
-      "mandatory" : [],
+      "mandatory" : ["Jorune"],
       "max" : 5,
       "name" : "Meute"
     },
