--- a/src/test/resources/udocon-application.conf
+++ b/src/test/resources/udocon-application.conf
@@ -3,7 +3,9 @@
   "settings" : {
     "incompatibility-anti-preference" : -50.0,
     "strong-preference" : 5.0,
-    "weak-preference" : 1.0
+    "weak-preference" : 1.0,
+    "default-min": 3,
+    "default-max": 5
   },
 
   "slots" : [
