--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -4,8 +4,8 @@
     "incompatibility-anti-preference" : -50.0,
     "strong-preference" : 5.0,
     "weak-preference" : 1.0,
-    "default-min": 3,
-    "default-max": 5
+    "default-min": 4,
+    "default-max": 6
   },
 
   "slots" : [
@@ -150,7 +150,7 @@
       "weight" : 1.5
     },
     {
-      "absences" : [],
+      "absences" : ["D3-afternoon"],
       "incompatible" : [],
       "name" : "Ozen",
       "weight" : 1.5
@@ -190,7 +190,7 @@
       "mandatory" : [
         "Paradoks"
       ],
-      "max" : 4,
+      "max" : 5,
       "name" : "Psi*run"
     },
     {
@@ -198,7 +198,7 @@
       "mandatory" : [
         "Orfeo"
       ],
-      "max" : 4,
+      "max" : 5,
       "name" : "Black Mirror"
     },
     {
@@ -206,7 +206,7 @@
       "mandatory" : [
         "Cryoban"
       ],
-      "max" : 4,
+      "max" : 5,
       "name" : "Godbound - l'appel"
     },
     {
@@ -221,7 +221,7 @@
       "mandatory" : [
         "Highlandjul"
       ],
-      "max" : 6,
+      "max" : 7,
       "name" : "Dieux Ennemis"
     },
     {
@@ -229,7 +229,7 @@
       "mandatory" : [
         "Cryoban"
       ],
-      "max" : 4,
+      "max" : 5,
       "name" : "P.U.N.C.H Unit - Katanga 1960"
     },
     {
@@ -237,7 +237,7 @@
       "mandatory" : [
         "Paradoks"
       ],
-      "max" : 6,
+      "max" : 7,
       "name" : "Summer camp - classe de neige"
     },
     {
@@ -245,7 +245,7 @@
       "mandatory" : [
         "Eugénie"
       ],
-      "max" : 4,
+      "max" : 5,
       "name" : "Inflorenza (ambiance Patient 13)"
     },
     {
@@ -253,7 +253,6 @@
       "mandatory" : [
         "Tolkraft"
       ],
-      "max" : 5,
       "name" : "Delta Green - Scénario original"
     },
     {
@@ -282,7 +281,6 @@
       "mandatory" : [
         "Tolkraft"
       ],
-      "max" : 5,
       "name" : "Les Derniers"
     },
     {
@@ -290,7 +288,6 @@
       "mandatory" : [
         "Zeben"
       ],
-      "max" : 4,
       "name" : "Shadow of the Demon Lord"
     },
     {
@@ -312,7 +309,7 @@
       "mandatory" : [
         "Boojum"
       ],
-      "max" : 4,
+      "max" : 5,
       "name" : "Le Retour de Soth"
     },
     {
@@ -320,13 +317,11 @@
       "mandatory" : [
         "Selpoivre"
       ],
-      "max" : 4,
       "name" : "Delta Green - Pennsylvania '99"
     },
     {
       "forbidden" : [],
       "mandatory" : ["Jorune"],
-      "max" : 5,
       "name" : "Meute"
     },
     {
@@ -355,7 +350,6 @@
       "mandatory" : [
         "Selpoivre"
       ],
-      "max" : 5,
       "name" : "DC comics - Darkest night"
     },
     {
@@ -363,7 +357,6 @@
       "mandatory" : [
         "Highlandjul"
       ],
-      "max" : 5,
       "name" : "Agôn"
     },
     {
