Adds command line elements. Better handling of UdoCon table format.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -7,4 +7,21 @@ gaston {
     incompatibility-anti-preference = -50
   }
 
+  udo-settings {
+    # Column at which the persons start on the first line
+    persons-starting-index = 2
+
+    # Column for the topics
+    topics-index = 0
+
+    # Column for the min number of persons on that topic, optional
+    min-players-index = null
+
+    # Column for the max number of persons on that topic
+    max-players-index = 1
+
+    # Weight given to any gamemaster
+    gamemaster-weight = 1.5
+  }
+
 }
