--- a/src/test/resources/udocon-table-formatted.conf
+++ b/src/test/resources/udocon-table-formatted.conf
@@ -9,11 +9,11 @@
   },
 
   "udo-settings": {
-    "persons-starting-index" = 4,
-    "topics-index" = 0,
-    "min-players-index" = null,
-    "max-players-index" = 2,
-    "gamemaster-weight" = 1.5
+    "persons-starting-index" : 4,
+    "topics-index" : 0,
+    "min-players-index" : null,
+    "max-players-index" : 2,
+    "gamemaster-weight" : 1.5
   }
 
   "slots" : [
@@ -158,7 +158,7 @@
       "weight" : 1.5
     },
     {
-      "absences" : ["D3-afternoon"],
+      "absences" : [],
       "incompatible" : [],
       "name" : "Ozen",
       "weight" : 1.5
@@ -261,6 +261,7 @@
       "mandatory" : [
         "Tolkraft"
       ],
+      "max" : 6,
       "name" : "Delta Green - Scénario original"
     },
     {
@@ -289,6 +290,7 @@
       "mandatory" : [
         "Tolkraft"
       ],
+      "max" : 6,
       "name" : "Les Derniers"
     },
     {
@@ -296,6 +298,7 @@
       "mandatory" : [
         "Zeben"
       ],
+      "max" : 5,
       "name" : "Shadow of the Demon Lord"
     },
     {
@@ -325,11 +328,13 @@
       "mandatory" : [
         "Selpoivre"
       ],
+      "max" : 5,
       "name" : "Delta Green - Pennsylvania '99"
     },
     {
       "forbidden" : [],
       "mandatory" : ["Jorune"],
+      "max" : 6,
       "name" : "Meute"
     },
     {
@@ -358,6 +363,7 @@
       "mandatory" : [
         "Selpoivre"
       ],
+      "max" : 6,
       "name" : "DC comics - Darkest night"
     },
     {
@@ -365,6 +371,7 @@
       "mandatory" : [
         "Highlandjul"
       ],
+      "max" : 6,
       "name" : "Agôn"
     },
     {
