Produces sample config file

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -5,6 +5,8 @@ gaston {
     strong-preference = 10
     weak-preference = 1
     incompatibility-anti-preference = -50
+    default-min = 1
+    default-max = 10
   }
 
   udo-settings {
@@ -24,4 +26,107 @@ gaston {
     gamemaster-weight = 1.5
   }
 
+
+
+
+  slots = [
+    "D1-afternoon",
+    "D1-evening",
+    "D2-afternoon",
+    "D2-evening",
+    "D3-afternoon"
+  ]
+
+  persons = [
+    {
+      absences = ["D1-afternoon"]
+      name = "Anatole"
+      weight = 1.0
+    },
+    {
+      incompatible = ["Anatole", "Colin"]
+      name = "Bernadette"
+      weight = 1.0
+    },
+    {
+      absences = ["D1-afternoon", "D1-evening"]
+      name = "Colin"
+      weight = 1.5
+    },
+    {
+      name = "Dominique"
+      weight = 1.5
+    }
+  ]
+
+
+
+
+  topics = [
+    {
+      forbidden = ["Anatole"],
+      mandatory = ["Bernadette"],
+      max = 5
+      name = "Alpha"
+    },
+    {
+      mandatory = [ "Colin", "Dominique" ],
+      max = 4
+      min = 4
+      name = "Beta"
+    },
+    {
+      mandatory = [ "Anatole" ],
+      name = "Gamma"
+    },
+    {
+      min = 5
+      name = "Delta"
+    }
+  ]
+
+
+
+
+
+  preferences = [
+    {
+      person = "Anatole",
+      strong = [
+        "Beta",
+        "Alpha"
+      ],
+      weak = [
+        "Delta"
+      ]
+    },
+    {
+      person = "Bernadette",
+      strong = [
+        "Delta"
+      ],
+      weak = [
+        "Alpha"
+      ]
+    },
+    {
+      person = "Colin",
+      strong = [
+        "Delta"
+      ],
+      weak = [
+        "Alpha"
+      ]
+    },
+    {
+      person = "Dominique",
+      strong = [
+        "Delta"
+      ],
+      weak = [
+        "Beta",
+        "Alpha"
+      ]
+    }
+  ]
 }
