--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -9,6 +9,7 @@ gaston {
     default-max = 10
   }
 
+  # Settings when reading the Udo-Table format
   udo-settings {
     # Column at which the persons start on the first line
     persons-starting-index = 2
@@ -27,14 +28,15 @@ gaston {
   }
 
 
-
+  # ###########################################################################
+  # What follows is a sample configuration
+  # ###########################################################################
 
   slots = [
     "D1-afternoon",
     "D1-evening",
     "D2-afternoon",
-    "D2-evening",
-    "D3-afternoon"
+    "D2-evening"
   ]
 
   persons = [
@@ -56,6 +58,39 @@ gaston {
     {
       name = "Dominique"
       weight = 1.5
+    },
+    {
+      name = "Éric"
+    },
+    {
+      name = "Françoise"
+    },
+    {
+      name = "Garfield"
+    },
+    {
+      name = "Harley"
+    },
+    {
+      name = "Isidore"
+    },
+    {
+      name = "Jackie"
+    },
+    {
+      name = "Kevin"
+    },
+    {
+      name = "Lana"
+    },
+    {
+      name = "Mac"
+    },
+    {
+      name = "Noah"
+    },
+    {
+      name = "Patricia"
     }
   ]
 
@@ -82,6 +117,46 @@ gaston {
     {
       min = 5
       name = "Delta"
+    },
+    {
+      max = 6
+      min = 3
+      name = "Epsilon"
+    },
+    {
+      max = 6
+      min = 3
+      name = "Zeta"
+    },
+    {
+      max = 6
+      min = 3
+      name = "Eta"
+    },
+    {
+      max = 6
+      min = 3
+      name = "Theta"
+    },
+    {
+      max = 6
+      min = 3
+      name = "Iota"
+    },
+    {
+      max = 6
+      min = 3
+      name = "Kappa"
+    },
+    {
+      max = 6
+      min = 3
+      name = "Lambda"
+    },
+    {
+      max = 6
+      min = 3
+      name = "Mu"
     }
   ]
 
