Added exclusive topics (#6). Refactors global constraints in the input.

--- a/src/main/resources/sample.conf
+++ b/src/main/resources/sample.conf
@@ -2,7 +2,7 @@
 # ###########################################################################
 # A sample configuration
 # ###########################################################################
-gaston {
+gaston = {
 
   slots = [
     "D1-afternoon",
@@ -131,6 +131,16 @@ gaston {
     }
   ]
 
+  constraints = {
+    simultaneous = [
+      {topics = ["Alpha", "Delta", "Theta"]},
+      {topics = ["Lambda", "Mu"]}
+    ]
+    exclusive = [
+      {topics = ["Lambda", "Mu"]},
+      {topics = ["Beta", "Gamma"], exemptions = ["Patricia"]}
+    ]
+  }
 
   preferences = [
     {
