--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -46,7 +46,6 @@
       "mandatory" : [
         "bernard"
       ],
-      "simultaneous": ["beta"],
       "min" : 5,
       "max" : 5,
       "name" : "alpha"
@@ -64,7 +63,14 @@
     }
   ]
 
-
+  "constraints" : {
+    "simultaneous" = [
+      {"topics" = ["alpha", "beta"]}
+    ]
+    "exclusive" = [
+      {"topics" = ["beta", "gamma"], "exemptions" = ["laverne"]}
+    ]
+  }
 
   "preferences" : [
     {
