Adds explicit parallelization value (#3).

--- a/src/main/resources/sample.conf
+++ b/src/main/resources/sample.conf
@@ -4,6 +4,8 @@
 # ###########################################################################
 gaston = {
 
+  settings.parallelization = 3
+
   slots = [
     "D1-afternoon",
     "D1-evening",
