Refactors the config file. Moves all preferences and constraints on the Persons. Handles directly the preference value in the config file (#4).

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,9 +1,6 @@
 gaston {
 
   settings {
-    # Strong preference should be more than twice as strong as the weak preference
-    strong-preference = 10
-    weak-preference = 1
     incompatibility-anti-preference = -50
     default-min = 1
     default-max = 10
@@ -25,5 +22,9 @@ gaston {
 
     # Weight given to any gamemaster
     gamemaster-weight = 1.5
+
+    # Strong wish value should be more than twice as strong as the weak wish value
+    strong-wish-value = 5
+    weak-wish-value = 1
   }
 }
