--- a/src/main/resources/sample.conf
+++ b/src/main/resources/sample.conf
@@ -18,20 +18,58 @@ gaston = {
       absences = ["D1-afternoon"]
       name = "Anatole"
       weight = 1.0
+      mandatory = ["Gamma"]
+      forbidden = ["Alpha"]
+      wishes = [
+        {
+          value = 10
+          topics = ["Beta", "Gamma"]
+        }, {
+          value = 1
+          topics = ["Delta"]
+        }
+      ]
     },
     {
       incompatible = ["Anatole", "Colin"]
       name = "Bernadette"
       weight = 1.0
+      mandatory = ["Alpha"]
+      wishes = [
+        {
+          value = 10
+          topics = ["Delta"]
+        }
+      ]
     },
     {
       absences = ["D1-afternoon", "D1-evening"]
       name = "Colin"
       weight = 1.5
+      mandatory = ["Beta"]
+      wishes = [
+        {
+          value = 10
+          topics = ["Delta"]
+        }, {
+          value = 1
+          topics = ["Alpha"]
+        }
+      ]
     },
     {
       name = "Dominique"
       weight = 1.5
+      mandatory = ["Beta"]
+      wishes = [
+        {
+          value = 10
+          topics = ["Delta"]
+        }, {
+          value = 1
+          topics = ["Alpha"]
+        }
+      ]
     },
     {
       name = "Eric"
@@ -71,20 +109,16 @@ gaston = {
 
   topics = [
     {
-      forbidden = ["Anatole"],
-      mandatory = ["Bernadette"],
       max = 5
       simultaneous = ["Delta", "Theta"]
       name = "Alpha"
     },
     {
-      mandatory = ["Colin", "Dominique"],
       max = 4
       min = 4
       name = "Beta"
     },
     {
-      mandatory = ["Anatole"],
       name = "Gamma"
     },
     {
@@ -144,44 +178,4 @@ gaston = {
     ]
   }
 
-  preferences = [
-    {
-      person = "Anatole",
-      strong = [
-        "Beta",
-        "Alpha"
-      ],
-      weak = [
-        "Delta"
-      ]
-    },
-    {
-      person = "Bernadette",
-      strong = [
-        "Delta"
-      ],
-      weak = [
-        "Alpha"
-      ]
-    },
-    {
-      person = "Colin",
-      strong = [
-        "Delta"
-      ],
-      weak = [
-        "Alpha"
-      ]
-    },
-    {
-      person = "Dominique",
-      strong = [
-        "Delta"
-      ],
-      weak = [
-        "Beta",
-        "Alpha"
-      ]
-    }
-  ]
 }
