--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,10 +1,8 @@
 # A minimal configuration
-"gaston" : {
+"gaston": {
 
-  "settings" : {
-    "incompatibility-anti-preference" : -50.0,
-    "strong-preference" : 5.0,
-    "weak-preference" : 1.0,
+  "settings": {
+    "incompatibility-anti-preference": -50.0,
     "default-min": 4,
     "default-max": 6
   },
@@ -15,55 +13,63 @@
     "min-players-index" = null,
     "max-players-index" = 2,
     "gamemaster-weight" = 1.5
+    "strong-wish-value": 5.0,
+    "weak-wish-value": 1.0,
   }
 
-  "slots" : [
+  "slots": [
     "A",
     "B"
   ]
 
-  "persons" : [
+  "topics": [
     {
-      "name" : "bernard"
+      "min": 5,
+      "max": 5,
+      "name": "alpha"
     },
     {
-      "name" : "laverne",
-      "absences" : [],
-      "incompatible" : [],
-      "weight" : 1
+      "max": 5,
+      "name": "beta"
     },
     {
-      "name" : "hoagie",
-      "absences" : [],
-      "incompatible" : [],
-      "weight" : 1.5
+      "name": "gamma"
     }
   ]
 
-  "topics" : [
+  "persons": [
     {
-      "forbidden" : [],
-      "mandatory" : [
-        "bernard"
-      ],
-      "min" : 5,
-      "max" : 5,
-      "name" : "alpha"
+      "name": "bernard"
+      "mandatory": ["alpha"]
+      "forbidden": []
+      "wishes": [
+        {
+          "value": 5
+          "topics": ["alpha"]
+        }, {
+          "value": 1
+          "topics": ["beta", "gamma"]
+        }
+      ]
     },
     {
-      "forbidden" : [
-        "laverne"
-      ],
-      "mandatory" : [],
-      "max" : 5,
-      "name" : "beta"
+      "name": "laverne"
+      "mandatory": []
+      "forbidden": ["beta"]
+      "absences": []
+      "incompatible": []
+      "weight": 1
+      "wishes": []
     },
     {
-      "name" : "gamma"
+      "name": "hoagie"
+      "absences": []
+      "incompatible": []
+      "weight": 1.5
     }
   ]
 
-  "constraints" : {
+  "constraints": {
     "simultaneous" = [
       {"topics" = ["alpha", "beta"]}
     ]
@@ -72,23 +78,4 @@
     ]
   }
 
-  "preferences" : [
-    {
-      "person" : "bernard",
-      "strong" : [
-        "alpha"
-      ],
-      "weak" : [
-        "beta"
-      ]
-    },
-    {
-      "person" : "laverne",
-      "strong" : [],
-      "weak" : []
-    },
-    {
-      "person" : "hoagie"
-    }
-  ]
 }
