--- a/src/test/resources/named-configuration.conf
+++ b/src/test/resources/named-configuration.conf
@@ -2,10 +2,8 @@
 "gaston": {
 
   "settings": {
-    "incompatibility-anti-preference": -50.0,
-    "strong-preference": 42.0,
-    "weak-preference": 1.0,
-    "default-min": 4,
+    "incompatibility-anti-preference": -42.0
+    "default-min": 4
     "default-max": 6
   }
 
@@ -14,6 +12,4 @@
   "persons": [{"name": "bernard"}]
 
   "topics": [{"name": "alpha"}]
-
-  "preferences": []
 }
