fix: Test inputs missing properties

--- a/src/test/resources/udocon-2017-completed.conf
+++ b/src/test/resources/udocon-2017-completed.conf
@@ -11,7 +11,9 @@
     "topics-index": 0,
     "min-players-index": null,
     "max-players-index": 2,
-    "gamemaster-weight": 1.5
+    "gamemaster-weight": 1.5,
+    "strong-wish-value": 5.0,
+    "weak-wish-value": 1.0,
   }
 
   "slots": [
