--- a/src/test/resources/udocon-2017-from-table.conf
+++ b/src/test/resources/udocon-2017-from-table.conf
@@ -12,6 +12,8 @@
     "min-players-index": null,
     "max-players-index": 2,
     "gamemaster-weight": 1.5
+    "strong-wish-value": 5.0,
+    "weak-wish-value": 1.0,
   }
 
   "slots": []
