Per-slot limit on number of topics

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -2,8 +2,8 @@ gaston {
 
   settings {
     incompatibility-anti-preference = -1000
-    default-min = 1
-    default-max = 10
+    default-min-persons-per-topic = 1
+    default-max-persons-per-topic = 10
   }
 
   # Settings when reading the Udo-Table format
