--- a/src/main/resources/sample.conf
+++ b/src/main/resources/sample.conf
@@ -4,13 +4,21 @@
 # ###########################################################################
 gaston = {
 
-  settings.parallelization = 3
+  settings.default-max-topics-per-slot = 3
+
 
   slots = [
-    "D1-afternoon",
-    "D1-evening",
-    "D2-afternoon",
-    "D2-evening"
+    {
+      "name": "D1-afternoon",
+      "max-topics": 4
+    }, {
+      "name": "D1-evening"
+    }, {
+      "name": "D2-afternoon",
+      "max-topics": 4
+    }, {
+      "name": "D2-evening"
+    }
   ]
 
   persons = [
