--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -3,8 +3,9 @@
 
   "settings": {
     "incompatibility-anti-preference": -1000.0,
-    "default-min": 4,
-    "default-max": 6
+    "default-max-topics-per-slot": 5,
+    "default-min-persons-per-topic": 4,
+    "default-max-persons-per-topic": 6
   },
 
   "udo-settings": {
@@ -18,8 +19,13 @@
   }
 
   "slots": [
-    "A",
-    "B"
+    {
+      "name": "A",
+      "max-topics": 4
+    },
+    {
+      "name": "B"
+    }
   ]
 
   "topics": [
