--- a/src/test/resources/named-configuration.conf
+++ b/src/test/resources/named-configuration.conf
@@ -3,11 +3,11 @@
 
   "settings": {
     "incompatibility-anti-preference": -1042.0
-    "default-min": 4
-    "default-max": 6
+    "default-min-persons-per-topic": 4
+    "default-max-persons-per-topic": 6
   }
 
-  "slots": ["A"]
+  "slots": [{"name": "A"}]
 
   "persons": [{"name": "bernard"}]
 
