--- a/src/test/resources/udocon-2017-completed.conf
+++ b/src/test/resources/udocon-2017-completed.conf
@@ -2,8 +2,9 @@
 
   "settings": {
     "incompatibility-anti-preference": -1000.0,
-    "default-min": 4,
-    "default-max": 6
+    "default-max-topics-per-slot": 6,
+    "default-min-persons-per-topic": 4,
+    "default-max-persons-per-topic": 6
   },
 
   "udo-settings": {
@@ -17,11 +18,19 @@
   }
 
   "slots": [
-    "D1-afternoon",
-    "D2-afternoon",
-    "D1-evening",
-    "D2-evening",
-    "D3-afternoon"
+    {
+      "name": "D1-afternoon"
+    }, {
+      "name": "D1-evening",
+      "max-topics": 5
+    }, {
+      "name": "D2-afternoon"
+    }, {
+      "name": "D2-evening",
+      "max-topics": 5
+    }, {
+      "name": "D3-afternoon"
+    }
   ]
 
   "topics": [
