--- a/src/test/resources/udocon-2017-from-table.conf
+++ b/src/test/resources/udocon-2017-from-table.conf
@@ -2,8 +2,8 @@
 
   "settings": {
     "incompatibility-anti-preference": -1000.0,
-    "default-min": 4,
-    "default-max": 6
+    "default-min-persons-per-topic": 4,
+    "default-max-persons-per-topic": 6
   },
 
   "udo-settings": {
@@ -16,7 +16,15 @@
     "weak-wish-value": 1.0,
   }
 
-  "slots": []
+  "slots": [
+    {
+      "name": "Day1",
+      "max-topics": 4
+    },
+    {
+      "name": "Day2"
+    }
+  ]
 
   "topics": [
     {
