Better handling of table input, and some tweeks to the input format.

--- a/src/main/resources/sample.conf
+++ b/src/main/resources/sample.conf
@@ -1,6 +1,6 @@
 
 # ###########################################################################
-# A sample configuration
+# A sample problem configuration
 # ###########################################################################
 gaston = {
 
@@ -28,56 +28,39 @@ gaston = {
       weight = 1.0
       mandatory = ["Gamma"]
       forbidden = ["Alpha"]
-      wishes = [
-        {
-          value = 10
-          topics = ["Beta", "Gamma"]
-        }, {
-          value = 1
-          topics = ["Delta"]
-        }
-      ]
+      wishes = {
+        "Beta" = 10
+        "Gamma" = 10
+        "Delta" = 10
+      }
     },
     {
       incompatible = ["Anatole", "Colin"]
       name = "Bernadette"
       weight = 1.0
       mandatory = ["Alpha"]
-      wishes = [
-        {
-          value = 10
-          topics = ["Delta"]
-        }
-      ]
+      wishes = {
+        "Delta" = 10
+      }
     },
     {
       absences = ["D1-afternoon", "D1-evening"]
       name = "Colin"
       weight = 1.5
       mandatory = ["Beta"]
-      wishes = [
-        {
-          value = 10
-          topics = ["Delta"]
-        }, {
-          value = 1
-          topics = ["Alpha"]
-        }
-      ]
+      wishes = {
+        "Alpha" = 1
+        "Delta" = 10
+      }
     },
     {
       name = "Dominique"
       weight = 1.5
       mandatory = ["Beta"]
-      wishes = [
-        {
-          value = 10
-          topics = ["Delta"]
-        }, {
-          value = 1
-          topics = ["Alpha"]
-        }
-      ]
+      wishes = {
+        "Alpha" = 1
+        "Delta" = 10
+      }
     },
     {
       name = "Eric"
