--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,87 +1,91 @@
 # A minimal configuration
-"gaston": {
+gaston: {
 
-  "settings": {
-    "incompatibility-anti-preference": -1000.0,
-    "default-max-topics-per-slot": 5,
-    "default-min-persons-per-topic": 4,
-    "default-max-persons-per-topic": 6
-  },
-
-  "udo-settings": {
-    "persons-starting-index" = 4,
-    "topics-index" = 0,
-    "min-players-index" = null,
-    "max-players-index" = 2,
-    "gamemaster-weight" = 1.5
-    "strong-wish-value": 5.0,
-    "weak-wish-value": 1.0,
+  settings: {
+    incompatibility-anti-preference: -1000.0
+    default-max-topics-per-slot: 5
+    default-min-persons-per-topic: 4
+    default-max-persons-per-topic: 6
   }
 
-  "slots": [
+  table-settings: {
+    separator: "\t"
+    persons-starting-index: 4
+    persons-row: 1
+    other-header-rows-count: 0
+    topic-index: 0
+    min-persons-index: null
+    max-persons-index: 2
+    persons-count-add: 1
+    mandatory-person-index: 1
+    mandatory-person-reward-weight: 1.5
+    forbidden-person-marker: 0
+    preferences-score-mapping: {
+      1: 1.0
+      2: 5.0
+    }
+  }
+
+  slots: [
     {
-      "name": "A",
-      "max-topics": 4
+      name: A,
+      max-topics: 4
     },
     {
-      "name": "B"
+      name: B
     }
   ]
 
-  "topics": [
+  topics: [
     {
-      "min": 5,
-      "max": 5,
-      "name": "alpha"
+      min: 5,
+      max: 5,
+      name: alpha
     },
     {
-      "max": 5,
-      "name": "beta"
-      "slots": ["A"]
+      max: 5,
+      name: beta
+      slots: [A]
     },
     {
-      "name": "gamma"
+      name: gamma
     }
   ]
 
-  "persons": [
+  persons: [
     {
-      "name": "bernard"
-      "mandatory": ["alpha"]
-      "forbidden": []
-      "wishes": [
-        {
-          "value": 5
-          "topics": ["alpha"]
-        }, {
-          "value": 1
-          "topics": ["beta", "gamma"]
-        }
-      ]
+      name: bernard
+      mandatory: [alpha]
+      forbidden: []
+      wishes: {
+        alpha: 5,
+        beta: 1,
+        gamma: 1
+      }
     },
     {
-      "name": "laverne"
-      "mandatory": []
-      "forbidden": ["beta"]
-      "absences": []
-      "incompatible": []
-      "weight": 1
-      "wishes": []
+      name: laverne
+      mandatory: []
+      forbidden: [beta]
+      absences: []
+      incompatible: []
+      weight: 1
+      wishes: {}
     },
     {
-      "name": "hoagie"
-      "absences": []
-      "incompatible": []
-      "weight": 1.5
+      name: hoagie
+      absences: []
+      incompatible: []
+      weight: 1.5
     }
   ]
 
-  "constraints": {
-    "simultaneous" = [
-      {"topics" = ["alpha", "beta"]}
+  constraints: {
+    simultaneous = [
+      {topics = [alpha, beta]}
     ]
-    "exclusive" = [
-      {"topics" = ["beta", "gamma"], "exemptions" = ["laverne"]}
+    exclusive = [
+      {topics = [beta, gamma], exemptions = [laverne]}
     ]
   }
 
