--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,30 +1,56 @@
+# Basic, default configuration
+
 gaston {
 
   settings {
     incompatibility-anti-preference = -1000
+    # default-max-topics-per-slot = 10
     default-min-persons-per-topic = 1
     default-max-persons-per-topic = 10
   }
 
   # Settings when reading the Udo-Table format
-  udo-settings {
-    # Column at which the persons start on the first line
-    persons-starting-index = 2
+  table-settings {
+    # Separator in the file (should be inside quotation marks)
+    separator = "\t"
+
+    # Lines where the person names appear.
+    persons-row: 0
+
+    # Number of other lines (in addition to the persons' line) to ignore.
+    other-header-rows-count = 0
 
     # Column for the topics
-    topics-index = 0
+    topic-index = 0
+
+    # Column for the mandatory player on a topic
+    mandatory-person-index = 1
 
     # Column for the min number of persons on that topic, optional
-    min-players-index = null
+    min-persons-index = 2
 
     # Column for the max number of persons on that topic
-    max-players-index = 1
+    max-persons-index = 3
+
+    # Number to add to the min and max number of persons read. Often 1 if the mandatory person isn't counted in the table.
+    persons-count-add = 0
+
+    # Column at which the persons start on the first line
+    persons-starting-index = 4
 
     # Weight given to any gamemaster
-    gamemaster-weight = 1.5
+    mandatory-person-reward-weight = 1.5
 
-    # Strong wish value should be more than twice as strong as the weak wish value
-    strong-wish-value = 5
-    weak-wish-value = 1
+    # Preferences with this value are considered to indicate that the relevent person is forbidden on that topic
+    forbidden-person-marker = 0
+
+    # For each text in a cell, the associated score. If no mapping is specified, the content of the cell will be used directly as the number.
+    preferences-score-mapping = {
+      # Strong wish values should be more than twice as strong as the weak wish value. The quotation marks are not
+      # mandatory, unless the text is not alphanumeric.
+      "+" = 1.0
+      "++" = 2.0
+      "+++" = 5.0
+    }
   }
 }
