Slots are split into sub-sequences (preparation for multi-slots topics)

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -26,7 +26,7 @@ gaston: {
     }
   }
 
-  slots: [
+  slots: [[
     {
       name: A,
       max-topics: 4
@@ -34,7 +34,7 @@ gaston: {
     {
       name: B
     }
-  ]
+  ]]
 
   topics: [
     {
