--- a/src/test/resources/named-configuration.conf
+++ b/src/test/resources/named-configuration.conf
@@ -7,7 +7,7 @@
     "default-max-persons-per-topic": 6
   }
 
-  "slots": [{"name": "A"}]
+  "slots": [[{"name": "A"}]]
 
   "persons": [{"name": "bernard"}]
 
