--- a/src/test/resources/udocon-2017-from-table.conf
+++ b/src/test/resources/udocon-2017-from-table.conf
@@ -25,13 +25,8 @@
   }
 
   "slots": [
-    {
-      "name": "Day1"
-      "max-topics": 4
-    },
-    {
-      "name": "Day2"
-    }
+    [ { "name": "Day1-afternoon" }, { "name": "Day1-evening", "max-topics": 4 } ]
+    [ { "name": "Day2-afternoon" } ]
   ]
 
   "topics": [
