--- a/src/test/resources/udocon-2017-completed.conf
+++ b/src/test/resources/udocon-2017-completed.conf
@@ -26,19 +26,9 @@
   }
 
   "slots": [
-    {
-      "name": "D1-afternoon"
-    }, {
-      "name": "D1-evening"
-      "max-topics": 5
-    }, {
-      "name": "D2-afternoon"
-    }, {
-      "name": "D2-evening"
-      "max-topics": 5
-    }, {
-      "name": "D3-afternoon"
-    }
+    [ { "name": "D1-afternoon" }, { "name": "D1-evening", "max-topics": 5 } ]
+    [ { "name": "D2-afternoon" }, { "name": "D2-evening", "max-topics": 5 } ]
+    [ { "name": "D3-afternoon" } ]
   ]
 
   "topics": [
