Optionnaly accepts people with nothing to do on some Slots

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -7,6 +7,9 @@ gaston {
     # default-max-topics-per-slot = 10
     default-min-persons-per-topic = 1
     default-max-persons-per-topic = 10
+    max-persons-on-nothing = 0
+    min-persons-on-nothing = 0
+    person-on-nothing-anti-preference = -100
   }
 
   # Settings when reading the Udo-Table format
