--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -44,6 +44,8 @@ gaston {
     # Weight given to any gamemaster
     mandatory-person-reward-weight = 1.5
 
+    topic-occurrence-count-index = null
+
     # Preferences with this value are considered to indicate that the relevent person is forbidden on that topic
     forbidden-person-marker = 0
 
