Cleanup and simplifications on the input

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,10 +1,19 @@
-
 # ###########################################################################
-# A sample problem configuration
+# Basic configuration
 # ###########################################################################
+
 gaston = {
 
   settings.default-max-topics-per-slot = 3
+
+  table-settings {
+    mandatory-person-weight = 1.5
+    preferences-score-mapping = {
+      "+" = 1.0
+      "++" = 2.0
+      "+++" = 5.0
+    }
+  }
 
 
   slots = [
