--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -4,12 +4,17 @@ gaston {
 
   settings {
     incompatibility-anti-preference = -1000
-    # default-max-topics-per-slot = 10
+    default-max-topics-per-slot = null
     default-min-persons-per-topic = 1
     default-max-persons-per-topic = 10
+    # Maximum number of persons that can have no topic on a slot
     max-persons-on-nothing = 0
+    # Minimum number of persons that can have no topic on a slot (so that there are enough unoccupied person for them to do something) */
     min-persons-on-nothing = 0
+    # Negative score for someone not doing anything */
     person-on-nothing-anti-preference = -100
+    #Should initial schedules on each iteration be empty or backtracked ?
+    backtrack-initial-schedule = true
   }
 
   # Settings when reading the Udo-Table format
@@ -23,8 +28,14 @@ gaston {
     # Number of other lines (in addition to the persons' line) to ignore.
     other-header-rows-count = 0
 
+    # Column at which the persons start on the first line
+    persons-starting-index = 4
+
     # Column for the topics
     topic-index = 0
+
+    # Index for the count of occurrences of a topic (if there are multiple sessions)
+    topic-occurrence-count-index = null
 
     # Column for the mandatory player on a topic
     mandatory-person-index = 1
@@ -38,24 +49,26 @@ gaston {
     # Number to add to the min and max number of persons read. Often 1 if the mandatory person isn't counted in the table.
     persons-count-add = 0
 
-    # Column at which the persons start on the first line
-    persons-starting-index = 4
+    # If a person is mandatory on one topic, his preferences will be weighed. 1 is no change for mandatory persons. */
+    mandatory-person-weight = 1.5
 
-    # Weight given to any gamemaster
-    mandatory-person-reward-weight = 1.5
-
-    topic-occurrence-count-index = null
-
-    # Preferences with this value are considered to indicate that the relevent person is forbidden on that topic
+    # Preferences with this value are considered to indicate that the corresponding person is forbidden on that topic
     forbidden-person-marker = 0
 
-    # For each text in a cell, the associated score. If no mapping is specified, the content of the cell will be used directly as the number.
-    preferences-score-mapping = {
-      # Strong wish values should be more than twice as strong as the weak wish value. The quotation marks are not
-      # mandatory, unless the text is not alphanumeric.
-      "+" = 1.0
-      "++" = 2.0
-      "+++" = 5.0
-    }
+    # For each text in a cell, the associated score. Unknowm texts are ignored. If no mapping is specified, the content
+    # of the cell will be used directly as the number.
+    preferences-score-mapping = null
   }
+
+  slots = [[]]
+
+  persons = []
+
+  topics = []
+
+  constraints = {
+    simultaneous = []
+    exclusive = []
+  }
+
 }
