Documentation (and some parameters' renaming)

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -9,27 +9,27 @@ gaston {
     default-max-persons-per-topic = 10
     # Maximum number of persons that can have no topic on a slot
     max-persons-on-nothing = 0
-    # Minimum number of persons that can have no topic on a slot (so that there are enough unoccupied person for them to do something) */
+    # Minimum number of persons that can have no topic on a slot (so that there are enough unoccupied person for them to do something)
     min-persons-on-nothing = 0
-    # Negative score for someone not doing anything */
+    # Negative score for someone not doing anything
     person-on-nothing-anti-preference = -100
     #Should initial schedules on each iteration be empty or backtracked ?
     backtrack-initial-schedule = true
   }
 
-  # Settings when reading the Udo-Table format
+  # Settings when importing a table
   table-settings {
     # Separator in the file (should be inside quotation marks)
     separator = "\t"
 
-    # Lines where the person names appear.
+    # Row where the person names appear.
     persons-row: 0
 
-    # Number of other lines (in addition to the persons' line) to ignore.
-    other-header-rows-count = 0
+    # Row where the wishes start.
+    wishes-start-row = 1
 
     # Column at which the persons start on the first line
-    persons-starting-index = 4
+    persons-start-index = 4
 
     # Column for the topics
     topic-index = 0
@@ -49,7 +49,7 @@ gaston {
     # Number to add to the min and max number of persons read. Often 1 if the mandatory person isn't counted in the table.
     persons-count-add = 0
 
-    # If a person is mandatory on one topic, his preferences will be weighed. 1 is no change for mandatory persons. */
+    # If a person is mandatory on one topic, his preferences will be weighed. 1 is no change for mandatory persons.
     mandatory-person-weight = 1.5
 
     # Preferences with this value are considered to indicate that the corresponding person is forbidden on that topic
